$Id: NEWS,v 1.63 2000-08-01 20:13:07 macgyver Exp $

1.2.0 - Released: 08/??/2000
----------------------------
- Passive FTP works properly now (was broken in RC2).
- Compilation problems fixed on some obscure platforms.
- PAM authentication finally works again on Solaris (due to an annoying bug in
  Solaris).
- Added the DeleteAbortedStores directive.
- Fixed a minor bug in SITE HELP.
- Eliminated a race when logging in with MaxClients.

1.2.0RC2 - Released: 07/28/2000
-------------------------------
- Made sure ServerUseReverseDNS was honored.
- Compile problems on various problems.
- Added descriptions for more errors to be more RFC compliant.
- UID/GID handling is more portable now on systems with unusual UID/GID sizes.
- PAM handles should be persistent across jailed environments.
- Various additions to configure to make it more portable and correct.
- AllowChmod works properly now.
- HP/UX sendfile support.
- Cleaned up configure and supporting files.

1.2.0RCl - Released: 07/11/2000
-------------------------------
- Fixed a bug in mod_ls that could cause a crash.
- Fixed a minor bug related to group permissions.
- Fixed a bug in calculating file system size when using statvfs.
- Fixed a bug when a 'TYPE L' directive is passed improperly.
- Fixed Umask directive handling in directories.
- Changed bandwidth throttling to use select() instead of usleep() to work
  better across platforms.
- Updated mod_ldap to 2.5.2.
- Environment is now preserved before trying anything fancy with set_proc_title.
- Warn a user if an invalid class is specified in ExtendedLog.
- Logging of transfer times is more precise now.
- mod_quota now comes with ProFTPD in the contrib directory.
- FreeBSD 4.0 support.
- Unixware support.
- Updated config.guess and config.sub to reflect new platforms.
- Added a %k directive to DisplayQuit that shows a more user-friendly count of
  data transferred (ie: 23MB, 1.2GB, etc.).