@@ -251,7 +251,7 @@ href="#Limit">&lt;Limit&gt;</a> block. Although proftpd's default
 <hr>
 <h2><a name="AllowChmod">AllowChmod</a></h2>
 <p><strong>Syntax:</strong> AllowChmod <em>bool</em><br>
-  <strong>Default:</strong> false<br>
+  <strong>Default:</strong> true<br>
   <strong>Context:</strong> server config, &lt;Global&gt;, &lt;VirtualHost&gt;, 
   &lt;Anonymous&gt;, &lt;Global&gt;<br> 
   <STRONG>Module:</STRONG> mod_site<BR>
