@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.63 2000-08-01 20:13:07 macgyver Exp $
+$Id: NEWS,v 1.64 2000-08-01 20:41:31 macgyver Exp $
 
 1.2.0 - Released: 08/??/2000
 ----------------------------
@@ -9,6 +9,7 @@ $Id: NEWS,v 1.63 2000-08-01 20:13:07 macgyver Exp $
 - Added the DeleteAbortedStores directive.
 - Fixed a minor bug in SITE HELP.
 - Eliminated a race when logging in with MaxClients.
+- AllowChmod defaults to 'on' now for simplicity and compatibility.
 
 1.2.0RC2 - Released: 07/28/2000
 -------------------------------
